--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-fixed-top sticky-top navbar-expand-lg">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" [routerLink]="['/home']">Ao Chuyện Shop</a>
+        <a class="navbar-brand" [routerLink]="['/home']">Ao Chuyện Nè</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" [routerLink]="['home']" [routerLinkActive]="['active']">Home</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['home']" [routerLinkActive]="['active']">Trang chủ</a></li>
             </ul>
             <ul class="navbar-nav">
                 <!-- <li  class="nav-item"><a class="nav-link" [routerLink]="['/login']" [routerLinkActive]="['active']">Login</a></li> -->
                 <!-- <li  class="nav-item"><a class="nav-link" [routerLink]="['/register']" [routerLinkActive]="['active']">Register</a></li> -->
-                <button class="btn btn-outline-dark">
+                <button class="btn btn-outline-dark" (click)="moveToCart()">
                     <i class="bi-cart-fill me-1"></i>
-                    Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">4</span>
+                    Giỏ hàng
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">{{numberOfCartLine}}</span>
                 </button>
                 <!-- <li class="nav-item"><a href="" class="nav-link">Logout</a></li> -->
             </ul>
