--- a/src/app/shared/product/product.component.html
+++ b/src/app/shared/product/product.component.html
@@ -4,5 +4,6 @@
     <mat-card-header>{{product.price}}</mat-card-header>
     <mat-card-actions>
         <app-button [btnName]="'Mua'" (clickEvent)="onAddToCart($event)"></app-button>
+        <app-button [btnName]="'Chi tiết'"></app-button>
     </mat-card-actions>
 </mat-card>
