--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,4 @@
-<app-product-list [searchProduct]="searchProduct"></app-product-list>
+<div class="row">
+    <app-sidebar class="col-xxl-1 col-md-12 mb-md-4"></app-sidebar>
+    <app-product-list class="col-11" [searchProduct]="searchProduct"></app-product-list>
+</div>
