--- a/src/app/core/layouts/navbar/navbar.component.html
+++ b/src/app/core/layouts/navbar/navbar.component.html
@@ -6,7 +6,8 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link" [routerLink]="['home']" [routerLinkActive]="['active']">Trang chủ</a></li>
+                <li class="nav-item"><a class="nav-link" [routerLink]="['home']" [routerLinkActive]="['active']">Trang
+                        chủ</a></li>
             </ul>
             <ul class="navbar-nav">
                 <!-- <li  class="nav-item"><a class="nav-link" [routerLink]="['/login']" [routerLinkActive]="['active']">Login</a></li> -->
