--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,12 @@
-// @import "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
-// @import "node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
-// @import "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css";
-// @import "node_modules/@angular/material/prebuilt-themes/purple-green.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 * {
+    font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
+    border-radius: 0.375rem;
+}
+
+.money {
+    color: #00d600;
 }
