--- a/src/app/shared/product/product.component.html
+++ b/src/app/shared/product/product.component.html
@@ -1,4 +1,4 @@
-<mat-card class="p-2" @simpleAnimation *ngIf="product">
+<mat-card class="p-2">
     <mat-card-title>{{product.informations[0].name}}</mat-card-title>
     <img mat-card-image src="{{image}}" />
     <mat-card-header class="money">Giá: {{product.price}}</mat-card-header>
