--- a/src/app/shared/cart/cart.component.html
+++ b/src/app/shared/cart/cart.component.html
@@ -1,16 +1,15 @@
 <div class="row">
-    <div class="col-4">
-        product
-    </div>
     <div class="col-8">
         <div class="cart-details mb-2" *ngFor="let key of getKeys()">
             <button class="btn-close" (click)="removeItem(key)"></button>
-            <app-cart-item (quantityChange)="changeQuantityOfProduct(key, $event)" [product]="key" [quantity]="productMap.get(key) ?? 0"></app-cart-item>
+            <app-cart-item (quantityChange)="changeQuantityOfProduct(key, $event)" [product]="key"
+                [quantity]="productMap.get(key) ?? 0"></app-cart-item>
             <app-spinner *ngIf="numberOfSelectedProducts !== productMap.size"></app-spinner>
         </div>
     </div>
-</div>
-<div class="row">
-    <app-button class="col-4" [btnName]="'Thanh toán'" class="checkout-button" (clickEvent)="onCheckout()"></app-button>
-    <p class="col-8 mt-3 money">Tổng Tiền: {{totalPrice}}</p>
+    <div class="row col-4">
+        <p class="col-8 mt-3 money">Tổng Tiền: {{totalPrice}}</p>
+        <app-button class="col-4" [btnName]="'Thanh toán'" class="checkout-button"
+            (clickEvent)="onCheckout()"></app-button>
+    </div>
 </div>
