--- a/src/app/shared/cart/cart-item/cart-item.component.html
+++ b/src/app/shared/cart/cart-item/cart-item.component.html
@@ -1,4 +1,4 @@
-<mat-card class="d-flex flex-row row" @simpleAnimation *ngIf="product">
+<mat-card class="d-flex flex-row" @simpleAnimation *ngIf="product">
     <div class="col-9 d-flex flex-row align-items-center">
         <img mat-card-sm-image src="{{image}}" style="margin-right: 5%;" class="object-fit-cover">
         <div class="d-flex flex-column">
