--- a/src/app/shared/cart/cart-item/cart-item.component.scss
+++ b/src/app/shared/cart/cart-item/cart-item.component.scss
@@ -6,3 +6,9 @@ svg:hover {
     cursor: pointer;
     transform: scale(1.3);
 }
+
+::ng-deep {
+    .mat-mdc-card {
+        box-shadow: none !important;
+    }
+}
