--- a/src/app/shared/cart/checkout/checkout.component.html
+++ b/src/app/shared/cart/checkout/checkout.component.html
@@ -1,11 +1,15 @@
 <div class="d-flex flex-column align-items-center">
-    <form *ngIf="!isDone"  [formGroup]="form" class="row" style="width: 70%;">
+    <form *ngIf="!isDone" [formGroup]="form" class="row" style="width: 70%;">
         <div [ngClass]="formGroupClass">
             <label>Tỉnh/Thành</label>
             <select class="form-control" (change)="onProviceChange($event)" formControlName="province">
                 <option *ngFor="let division of divisions" [value]="division.code + ',' + division.name">
                     {{division.name}}</option>
             </select>
+            <span class="text-danger" 
+            *ngIf="form.get('province')?.invalid && (form.get('province')?.dirty || form.get('province')?.touched)">
+                Chỗ này bị thiếu nè
+            </span>
         </div>
         <div [ngClass]="formGroupClass">
             <label>Quận/Huyện</label>
@@ -14,40 +18,56 @@
                     {{district.name}}
                 </option>
             </select>
+            <span class="text-danger" 
+            *ngIf="form.get('district')?.invalid && (form.get('district')?.dirty || form.get('district')?.touched)">
+                Chỗ này bị thiếu nè
+            </span>
         </div>
-        <div  [ngClass]="formGroupClass">
+        <div [ngClass]="formGroupClass">
             <label>Phường/Xã</label>
             <select class="form-control" formControlName="ward">
                 <option *ngFor="let ward of wards" [value]="ward.name">
                     {{ward.name}}
                 </option>
             </select>
+            <span class="text-danger" 
+            *ngIf="form.get('ward')?.invalid && (form.get('ward')?.dirty || form.get('ward')?.touched)">
+                Chỗ này bị thiếu nè
+            </span>
         </div>
         <div [ngClass]="formGroupClass">
             <label>Đường, Số nhà</label>
             <input type="text" class="form-control" formControlName="houseNumber" />
+            <span class="text-danger" 
+            *ngIf="form.get('houseNumber')?.invalid && (form.get('houseNumber')?.dirty || form.get('houseNumber')?.touched)">
+                Chỗ này bị thiếu nè
+            </span>
         </div>
         <div [ngClass]="formGroupClass">
             <label>Số điện thoại</label>
             <input type="tel" class="form-control" formControlName="phoneNumber" />
+            <span class="text-danger"             
+            *ngIf="form.get('phoneNumber')?.invalid && (form.get('phoneNumber')?.dirty || form.get('phoneNumber')?.touched)">
+                Kiểm tra lại số điện đi nè
+            </span>
         </div>
         <div [ngClass]="formGroupClass">
             <label>Email</label>
             <input type="email" class="form-control" formControlName="email" />
+            <span class="text-danger" 
+            *ngIf="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
+                Coi Mail đúng chưa nè
+            </span>
         </div>
         <div class="d-flex justify-content-center mt-3">
-            <app-button
-            role="button"
-            [tooltipContent]="form.invalid? 'Phiền bạn nhập hết vào form nha' : ''"
-            [btnName]="'Tạo đơn'" 
-            [isDisable]="form.invalid || isSubmited"
-            [ngClass]="form.invalid ? 'invalid-button' : 'valid-button' "
-            (clickEvent)="createOrder($event)"
-            ></app-button>
+            <app-button role="button" [tooltipContent]="form.invalid? 'Phiền bạn nhập hết vào form nha' : ''"
+                [btnName]="'Tạo đơn'" [isDisable]="form.invalid || isSubmited"
+                [ngClass]="form.invalid ? 'invalid-button' : 'valid-button' "
+                (clickEvent)="createOrder($event)"></app-button>
         </div>
     </form>
     <app-spinner *ngIf="isSubmited"></app-spinner>
-    <div *ngIf="qrUrl" style="width: 80%; object-fit: cover;" class="d-flex justify-content-center">
+    <div *ngIf="qrUrl" style="width: 50%; object-fit: cover;" class="d-flex justify-content-center">
         <img [src]="qrUrl" />
     </div>
 </div>
