--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+@import url("~@angular/material/prebuilt-themes/deeppurple-amber.css");
 @import url("https://fonts.googleapis.com/css?family=Nunito");
 
 * {
